# Word-Comparator

./: .gitignore  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  openvm.sh  run.dev.sh  run.sh
Client/: .dockerignore  CMakeLists.txt  Dockerfile  main.c
Client/src/: main.c
Client/src/Controller/: controller.c  hello_world_controller.c  hello_world_controller.h
Client/src/Services/: info_service.c  info_service.h  service.h
Client/src/services/: info_service.c  info_service.h
Client/src/sservices/: info_service.c
Server/: .dockerignore  CMakeLists.txt  Dockerfile  conanfile.txt  main.c  rot13.service  rot13.socket  rot13@.service  server.service
Server/src/: main.c
Server/src/API/: file_controller.c  file_controller.h  hello_world_controller.c  hello_world_controller.h  routes.c  routes.h
Server/src/Data/: file_repository.h
Server/src/Managers/: file_manager.c
Server/src/api/: file_controller.c
Server/src/data/: file_repository.c
Server/src/managers/: file_manager.c  file_manager.h
Server/src/smanagers/: file_manager.c  file_manager.h
